--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1"
