--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-rewards": "^2.1.0",
     "react-router-dom": "^7.1.1",
     "reactjs-popup": "^2.0.6"
   },
