--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
