--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-credit-cards-2": "^1.0.3",
