--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://srishti-parulekar.github.io/Vaulet/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
