migrating postgres docker image to railway hosted postgres

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,10 +10,25 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_DB: vaulet-db
+          POSTGRES_USER: mishti
+          POSTGRES_PASSWORD: mishti123
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-        
+
       - name: Install Node
         uses: actions/setup-node@v3
         with:
@@ -30,7 +45,7 @@ jobs:
         with:
           name: production-files
           path: ./frontend/dist
-          
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
