--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,9 +3,10 @@ nixPkgs = ['python311', 'postgresql', 'nodejs-18_x']
 
 [phases.install]
 cmds = [
-  "pip install --upgrade pip",
-  "pip install -r requirements.txt"
+  "python3.11 -m ensurepip",
+  "python3.11 -m pip install --upgrade pip",
+  "python3.11 -m pip install -r requirements.txt"
 ]
 
 [start]
-cmd = "python manage.py runserver 0.0.0.0:$PORT"
+cmd = "python3.11 manage.py runserver 0.0.0.0:$PORT"
