fixes for railway

--- a/vaulet/Dockerfile
+++ b/vaulet/Dockerfile
@@ -2,9 +2,9 @@ FROM python:3.9
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY vaulet/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "vaulet.wsgi:application"]
+CMD ["gunicorn", "--bind", "0.0.0.0:$PORT", "vaulet.wsgi:application"]
