--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - media_volume:/app/media
     env_file:
       - .env
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - redis
     networks:
@@ -43,6 +45,8 @@ services:
       - ./vaulet:/app
     env_file:
       - .env
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - backend
       - redis
@@ -58,6 +62,8 @@ services:
       - ./vaulet:/app
     env_file:
       - .env
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - backend
       - redis
@@ -74,6 +80,8 @@ services:
       - ./vaulet:/app
     env_file:
       - .env
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - backend
     networks:
