--- a/vaulet/requirements.txt
+++ b/vaulet/requirements.txt
@@ -17,6 +17,7 @@ google-generativeai
 duckduckgo-search
 celery==5.3.6
 django-celery-beat==2.5.0
+django-redis
 redis
 Django>=4.0,<5.0
 gunicorn>=20.1.0
@@ -25,3 +26,4 @@ psycopg2-binary>=2.9.0
 whitenoise>=6.0.0
 python-decouple>=3.6
 django-crontab>=0.7.1
+gunicorn
